--- a/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
+++ b/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlephNote.Plugins.Headless</RootNamespace>
     <AssemblyName>HeadlessPlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -48,6 +48,10 @@
     <Compile Include="HeadlessData.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj">
+      <Project>{a43f999d-30fb-44f0-9cef-9e24a100651c}</Project>
+      <Name>AlephNote.PluginInterface</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\External\CSharpUtils\CSharpUtils.csproj">
       <Project>{D661CD9F-8934-496D-8332-BC82AAB77598}</Project>
       <Name>CSharpUtils</Name>
