--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -25,4 +25,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+
 </Project>
