--- a/Source/Plugins/FilesystemPlugin/FilesystemPlugin.csproj
+++ b/Source/Plugins/FilesystemPlugin/FilesystemPlugin.csproj
@@ -6,16 +6,10 @@
     <AssemblyName>FilesystemPlugin</AssemblyName>
     <PackageId>FilesystemPlugin</PackageId>
     
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
-  </PropertyGroup>
+    <AssemblyVersion>1.1.1.0</AssemblyVersion>
+    <FileVersion>1.1.1.0</FileVersion>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <OutputPath>..\..\Bin\$(ConfigurationName)\Windows\Plugins\</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-    <OutputPath>..\..\Bin\$(ConfigurationName)\Core\Plugins\</OutputPath>
+    <OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
   </PropertyGroup>
 
   <ItemGroup>
